--- a/src/_css/main.scss
+++ b/src/_css/main.scss
@@ -61,11 +61,13 @@ $tile-spacing: $grid-gutter / 2;
 .target-indicator {
   display: grid;
   padding: $grid-gutter 0;
+  margin-bottom: 0;
 }
 
 .target-indicator-title {
   grid-column: 1;
   grid-row: 1;
+  margin-bottom: 0;
 
   &:nth-of-type(2) {
     grid-column: 2;
@@ -76,6 +78,7 @@ $tile-spacing: $grid-gutter / 2;
 .target-indicator-amount {
   grid-column: 1;
   grid-row: 2;
+  margin-bottom: 0;
 
   &:nth-of-type(2) {
     grid-column: 2;
